Update Synology template variable names for USB/eSATA
Replaced all USB and eSATA related template variables with new 'hddusb' and 'hddesata' naming conventions in Synology.html. This improves consistency and likely aligns with backend changes.

--- a/core/template/mobile/Synology.html
+++ b/core/template/mobile/Synology.html
@@ -167,21 +167,21 @@
 				style="width:15px;max-width:15px;max-height:15px;">#syno_v4_icon#</span>
 			<span id="syno_v4_unit#id#"></span>
 		</div>
-		<div class="tooltips" style="display: #syno_usb_display#;" data-syno-id="syno_usb"
-			data-syno-value="#syno_usb_free_percent#" data-syno-prefix="#syno_usb#"
-			data-syno-low="#syno_usb_free_percent_colorlow#" data-syno-high="#syno_usb_free_percent_colorhigh#"
-			data-syno-tendance="#syno_usb_free_percent_tendance#">
-			<span title="#syno_usb_name# || Date valeur : #syno_usb_value# || Date collecte : #syno_usb_collect#"
-				style="width:15px;max-width:15px;max-height:15px;">#syno_usb_icon#</span>
-			<span id="syno_usb_unit#id#"></span>
+		<div class="tooltips" style="display: #syno_hddusb_display#;" data-syno-id="syno_hddusb"
+			data-syno-value="#syno_hddusb_free_percent#" data-syno-prefix="#syno_hddusb#"
+			data-syno-low="#syno_hddusb_free_percent_colorlow#" data-syno-high="#syno_hddusb_free_percent_colorhigh#"
+			data-syno-tendance="#syno_hddusb_free_percent_tendance#">
+			<span title="#syno_hddusb_name# || Date valeur : #syno_hddusb_value# || Date collecte : #syno_hddusb_collect#"
+				style="width:15px;max-width:15px;max-height:15px;">#syno_hddusb_icon#</span>
+			<span id="syno_hddusb_unit#id#"></span>
 		</div>
-		<div class="tooltips" style="display: #syno_esata_display#;" data-syno-id="syno_esata"
-			data-syno-value="#syno_esata_free_percent#" data-syno-prefix="#syno_esata#"
-			data-syno-low="#syno_esata_free_percent_colorlow#" data-syno-high="#syno_esata_free_percent_colorhigh#"
-			data-syno-tendance="#syno_esata_free_percent_tendance#">
-			<span title="#syno_esata_name# || Date valeur : #syno_esata_value# || Date collecte : #syno_esata_collect#"
-				style="width:15px;max-width:15px;max-height:15px;">#syno_esata_icon#</span>
-			<span id="syno_esata_unit#id#"></span>
+		<div class="tooltips" style="display: #syno_hddesata_display#;" data-syno-id="syno_hddesata"
+			data-syno-value="#syno_hddesata_free_percent#" data-syno-prefix="#syno_hddesata#"
+			data-syno-low="#syno_hddesata_free_percent_colorlow#" data-syno-high="#syno_hddesata_free_percent_colorhigh#"
+			data-syno-tendance="#syno_hddesata_free_percent_tendance#">
+			<span title="#syno_hddesata_name# || Date valeur : #syno_hddesata_value# || Date collecte : #syno_hddesata_collect#"
+				style="width:15px;max-width:15px;max-height:15px;">#syno_hddesata_icon#</span>
+			<span id="syno_hddesata_unit#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #cpu_display#;">
 			<span
