--- a/core/template/mobile/AsusWRT.html
+++ b/core/template/mobile/AsusWRT.html
@@ -628,11 +628,15 @@
 					const low = parseFloat(dataset.persoLow)
 					const high = parseFloat(dataset.persoHigh)
 					const color = getColorStyle(val, low, high, false)
+				// Construire l'icône HTML à partir de la classe CSS (arrow-up, arrow-down, minus)
+				const tendanceStr = (dataset.persoTendance && dataset.persoTendance !== '' && !dataset.persoTendance.startsWith('#')) 
+					? ` <i style='color: var(--al-info-color) !important;' class='fas fa-${dataset.persoTendance}'></i>` 
+					: ''
 
-					if (color) {
-						persoEl.innerHTML = '<span class="state"' + color + '>' + value + '</span><span>' + dataset.persoUnite + '</span>' + (dataset.persoTendance || '')
-					} else {
-						persoEl.innerHTML = '<span>' + value + '</span><span>' + dataset.persoUnite + '</span>' + (dataset.persoTendance || '')
+				if (color) {
+					persoEl.innerHTML = `<span class="state"${color}>${value}</span><span>${dataset.persoUnite}</span>${tendanceStr}`
+				} else {
+					persoEl.innerHTML = `<span>${value}</span><span>${dataset.persoUnite}</span>${tendanceStr}`
 					}
 				} catch (e) {
 					console.error('[Monitoring AsusWRT] Error in initPerso for', container.dataset?.persoId || 'unknown', ':', e)
