--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -423,7 +423,7 @@
 					// Load avg 1mn
 					const loadAvg1mn = widgetRoot.querySelector('#load_avg_1mn#id#')
 					if (loadAvg1mn) {
-						const tendance1mn = loadAvg1mn.dataset.loadAvg1mnTendance || ''
+						const tendance1mn = loadAvg1mn.getAttribute('data-load-avg-1mn-tendance') || ''
 						const html1mn = buildThresholdHTML('#load_avg_1mn#', '#load_avg_1mn_colorlow#', '#load_avg_1mn_colorhigh#', '', tendance1mn)
 						loadAvg1mn.innerHTML = html1mn === '<span></span>' ? html1mn : `1 min : ${html1mn}`
 					}
@@ -431,7 +431,7 @@
 					// Load avg 5mn
 					const loadAvg5mn = widgetRoot.querySelector('#load_avg_5mn#id#')
 					if (loadAvg5mn) {
-						const tendance5mn = loadAvg5mn.dataset.loadAvg5mnTendance || ''
+						const tendance5mn = loadAvg5mn.getAttribute('data-load-avg-5mn-tendance') || ''
 						const html5mn = buildThresholdHTML('#load_avg_5mn#', '#load_avg_5mn_colorlow#', '#load_avg_5mn_colorhigh#', '', tendance5mn)
 						loadAvg5mn.innerHTML = html5mn === '<span></span>' ? html5mn : ` - 5 min : ${html5mn}`
 					}
@@ -439,7 +439,7 @@
 					// Load avg 15mn
 					const loadAvg15mn = widgetRoot.querySelector('#load_avg_15mn#id#')
 					if (loadAvg15mn) {
-						const tendance15mn = loadAvg15mn.dataset.loadAvg15mnTendance || ''
+						const tendance15mn = loadAvg15mn.getAttribute('data-load-avg-15mn-tendance') || ''
 						const html15mn = buildThresholdHTML('#load_avg_15mn#', '#load_avg_15mn_colorlow#', '#load_avg_15mn_colorhigh#', '', tendance15mn)
 						loadAvg15mn.innerHTML = html15mn === '<span></span>' ? html15mn : ` - 15 min : ${html15mn}`
 					}
