Update Synology HDD variable names for consistency
Renamed variables and attributes from syno_v2, syno_v3, and syno_v4 to syno_hddv2, syno_hddv3, and syno_hddv4 in the Synology.html template for improved clarity and consistency with existing naming conventions.

--- a/core/template/mobile/Synology.html
+++ b/core/template/mobile/Synology.html
@@ -146,29 +146,29 @@
 				style="width:15px;max-width:15px;max-height:15px;">#hdd_icon#</span>
 			<span id="hdd#id#" data-hdd-free-percent-tendance="#hdd_free_percent_tendance#"></span>
 		</div>
-		<div class="tooltips" style="display: #syno_v2_display#;" data-syno-id="syno_v2"
-			data-syno-value="#syno_v2_free_percent#" data-syno-prefix="#syno_v2#"
-			data-syno-low="#syno_v2_free_percent_colorlow#" data-syno-high="#syno_v2_free_percent_colorhigh#"
-			data-syno-tendance="#syno_v2_free_percent_tendance#">
-			<span title="#syno_v2_name# || Date valeur : #syno_v2_value# || Date collecte : #syno_v2_collect#"
-				style="width:15px;max-width:15px;max-height:15px;">#syno_v2_icon#</span>
-			<span id="syno_v2_unit#id#"></span>
+		<div class="tooltips" style="display: #syno_hddv2_display#;" data-syno-id="syno_hddv2"
+			data-syno-value="#syno_hddv2_free_percent#" data-syno-prefix="#syno_hddv2#"
+			data-syno-low="#syno_hddv2_free_percent_colorlow#" data-syno-high="#syno_hddv2_free_percent_colorhigh#"
+			data-syno-tendance="#syno_hddv2_free_percent_tendance#">
+			<span title="#syno_hddv2_name# || Date valeur : #syno_hddv2_value# || Date collecte : #syno_hddv2_collect#"
+				style="width:15px;max-width:15px;max-height:15px;">#syno_hddv2_icon#</span>
+			<span id="syno_hddv2_unit#id#"></span>
 		</div>
-		<div class="tooltips" style="display: #syno_v3_display#;" data-syno-id="syno_v3"
-			data-syno-value="#syno_v3_free_percent#" data-syno-prefix="#syno_v3#"
-			data-syno-low="#syno_v3_free_percent_colorlow#" data-syno-high="#syno_v3_free_percent_colorhigh#"
-			data-syno-tendance="#syno_v3_free_percent_tendance#">
-			<span title="#syno_v3_name# || Date valeur : #syno_v3_value# || Date collecte : #syno_v3_collect#"
-				style="width:15px;max-width:15px;max-height:15px;">#syno_v3_icon#</span>
-			<span id="syno_v3_unit#id#"></span>
+		<div class="tooltips" style="display: #syno_hddv3_display#;" data-syno-id="syno_hddv3"
+			data-syno-value="#syno_hddv3_free_percent#" data-syno-prefix="#syno_hddv3#"
+			data-syno-low="#syno_hddv3_free_percent_colorlow#" data-syno-high="#syno_hddv3_free_percent_colorhigh#"
+			data-syno-tendance="#syno_hddv3_free_percent_tendance#">
+			<span title="#syno_hddv3_name# || Date valeur : #syno_hddv3_value# || Date collecte : #syno_hddv3_collect#"
+				style="width:15px;max-width:15px;max-height:15px;">#syno_hddv3_icon#</span>
+			<span id="syno_hddv3_unit#id#"></span>
 		</div>
-		<div class="tooltips" style="display: #syno_v4_display#;" data-syno-id="syno_v4"
-			data-syno-value="#syno_v4_free_percent#" data-syno-prefix="#syno_v4#"
-			data-syno-low="#syno_v4_free_percent_colorlow#" data-syno-high="#syno_v4_free_percent_colorhigh#"
-			data-syno-tendance="#syno_v4_free_percent_tendance#">
-			<span title="#syno_v4_name# || Date valeur : #syno_v4_value# || Date collecte : #syno_v4_collect#"
-				style="width:15px;max-width:15px;max-height:15px;">#syno_v4_icon#</span>
-			<span id="syno_v4_unit#id#"></span>
+		<div class="tooltips" style="display: #syno_hddv4_display#;" data-syno-id="syno_hddv4"
+			data-syno-value="#syno_hddv4_free_percent#" data-syno-prefix="#syno_hddv4#"
+			data-syno-low="#syno_hddv4_free_percent_colorlow#" data-syno-high="#syno_hddv4_free_percent_colorhigh#"
+			data-syno-tendance="#syno_hddv4_free_percent_tendance#">
+			<span title="#syno_hddv4_name# || Date valeur : #syno_hddv4_value# || Date collecte : #syno_hddv4_collect#"
+				style="width:15px;max-width:15px;max-height:15px;">#syno_hddv4_icon#</span>
+			<span id="syno_hddv4_unit#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #syno_hddusb_display#;" data-syno-id="syno_hddusb"
 			data-syno-value="#syno_hddusb_free_percent#" data-syno-prefix="#syno_hddusb#"
